fix: lower chat z-index below autocomplete

--- a/packages/instantsearch.css/src/shared/_variables.scss
+++ b/packages/instantsearch.css/src/shared/_variables.scss
@@ -62,7 +62,7 @@ $ais-chat-breakpoint: 680px;
   --ais-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
   /* Z-index layers */
-  --ais-z-index-chat: 9999;
+  --ais-z-index-chat: 9998;
   --ais-z-index-autocomplete: 10000;
 
   /* Chat component */
